--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
           <li class="nav-item">
             <a class="nav-link" href="property-grid.html">Property</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="blog-grid.html">Blog</a>
-          </li>
-          <li class="nav-item dropdown">
+          </li> -->
+          <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
               Pages
@@ -169,16 +169,16 @@
               <a class="dropdown-item" href="agents-grid.html">Agents Grid</a>
               <a class="dropdown-item" href="agent-single.html">Agent Single</a>
             </div>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
-      <button type="button" class="btn btn-b-n navbar-toggle-box-collapse d-none d-md-block" data-toggle="collapse"
+      <!-- <button type="button" class="btn btn-b-n navbar-toggle-box-collapse d-none d-md-block" data-toggle="collapse"
         data-target="#navbarTogglerDemo01" aria-expanded="false">
         <span class="fa fa-search" aria-hidden="true"></span>
-      </button>
+      </button> -->
     </div>
   </nav>
   <!--/ Nav End /-->
@@ -186,7 +186,7 @@
   <!--/ Carousel Star /-->
   <div class="intro intro-carousel">
     <div id="carousel" class="owl-carousel owl-theme">
-      <div class="carousel-item-a intro-item bg-image" style="background-image: url(img/slide-1.jpg)">
+      <div class="carousel-item-a intro-item bg-image" style="background-image: url(img/drawings/5.jpg)">
         <div class="overlay overlay-a"></div>
         <div class="intro-content display-table">
           <div class="table-cell">
@@ -194,14 +194,15 @@
               <div class="row">
                 <div class="col-lg-8">
                   <div class="intro-body">
-                    <p class="intro-title-top">Doral, Florida
-                      <br> 78345</p>
-                    <h1 class="intro-title mb-4">
-                      <span class="color-b">204 </span> Mount
-                      <br> Olive Road Two</h1>
-                    <p class="intro-subtitle intro-price">
-                      <a href="#"><span class="price-a">rent | Ksh 12.000</span></a>
+                    <p class="intro-title-top">Kisumu, Kenya
+                      <!-- <br> 78345 -->
                     </p>
+                    <h1 class="intro-title mb-4">
+                      <span class="color-b">204 </span> Appartment
+                      <br>  Name</h1>
+                    <!-- <p class="intro-subtitle intro-price">
+                      <a href="#"><span class="price-a">rent | Ksh 12.000</span></a>
+                    </p> -->
                   </div>
                 </div>
               </div>
@@ -209,7 +210,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item-a intro-item bg-image" style="background-image: url(img/slide-2.jpg)">
+      <div class="carousel-item-a intro-item bg-image" style="background-image: url(img/drawings/2.jpg)">
         <div class="overlay overlay-a"></div>
         <div class="intro-content display-table">
           <div class="table-cell">
@@ -217,14 +218,15 @@
               <div class="row">
                 <div class="col-lg-8">
                   <div class="intro-body">
-                    <p class="intro-title-top">Doral, Florida
-                      <br> 78345</p>
-                    <h1 class="intro-title mb-4">
-                      <span class="color-b">204 </span> Rino
-                      <br> Venda Road Five</h1>
-                    <p class="intro-subtitle intro-price">
-                      <a href="#"><span class="price-a">rent | Ksh 12.000</span></a>
+                    <p class="intro-title-top">Kisumu, Kenya
+                      <!-- <br> 78345 -->
                     </p>
+                    <h1 class="intro-title mb-4">
+                      <span class="color-b">204 </span> Appartment
+                      <br>  Name</h1>
+                    <!-- <p class="intro-subtitle intro-price">
+                      <a href="#"><span class="price-a">rent | Ksh 12.000</span></a>
+                    </p> -->
                   </div>
                 </div>
               </div>
@@ -232,7 +234,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item-a intro-item bg-image" style="background-image: url(img/slide-3.jpg)">
+      <div class="carousel-item-a intro-item bg-image" style="background-image: url(img/drawings/1.jpg)">
         <div class="overlay overlay-a"></div>
         <div class="intro-content display-table">
           <div class="table-cell">
@@ -240,14 +242,15 @@
               <div class="row">
                 <div class="col-lg-8">
                   <div class="intro-body">
-                    <p class="intro-title-top">Doral, Florida
-                      <br> 78345</p>
-                    <h1 class="intro-title mb-4">
-                      <span class="color-b">204 </span> Alira
-                      <br> Roan Road One</h1>
-                    <p class="intro-subtitle intro-price">
-                      <a href="#"><span class="price-a">rent | Ksh 12.000</span></a>
+                    <p class="intro-title-top">Kisumu, Kenya
+                      <!-- <br> 78345 -->
                     </p>
+                    <h1 class="intro-title mb-4">
+                      <span class="color-b">204 </span> Appartment
+                      <br>  Name</h1>
+                    <!-- <p class="intro-subtitle intro-price">
+                      <a href="#"><span class="price-a">rent | Ksh 12.000</span></a>
+                    </p> -->
                   </div>
                 </div>
               </div>
@@ -276,24 +279,22 @@
           <div class="card-box-c foo">
             <div class="card-header-c d-flex">
               <div class="card-box-ico">
-                <span class="fa fa-gamepad"></span>
+                <span class="fa fa-pencil"></span>
               </div>
               <div class="card-title-c align-self-center">
-                <h2 class="title-c">Lifestyle</h2>
+                <h2 class="title-c">Design</h2>
               </div>
             </div>
             <div class="card-body-c">
               <p class="content-c">
-                Sed porttitor lectus nibh. Cras ultricies ligula sed magna dictum porta. Praesent sapien massa,
-                convallis a pellentesque
-                nec, egestas non nisi.
+                Our team assists you in designing your real estate development project from beginning to end.
               </p>
             </div>
-            <div class="card-footer-c">
+            <!-- <div class="card-footer-c">
               <a href="#" class="link-c link-icon">Read more
                 <span class="ion-ios-arrow-forward"></span>
               </a>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="col-md-4">
@@ -303,21 +304,19 @@
                 <span class="fa fa-usd"></span>
               </div>
               <div class="card-title-c align-self-center">
-                <h2 class="title-c">Loans</h2>
+                <h2 class="title-c">Finance</h2>
               </div>
             </div>
             <div class="card-body-c">
               <p class="content-c">
-                Nulla porttitor accumsan tincidunt. Curabitur aliquet quam id dui posuere blandit. Mauris blandit
-                aliquet elit, eget tincidunt
-                nibh pulvinar a.
+                Our services guide you through the financing process of your real estate development.
               </p>
             </div>
-            <div class="card-footer-c">
+            <!-- <div class="card-footer-c">
               <a href="#" class="link-c link-icon">Read more
                 <span class="ion-ios-arrow-forward"></span>
               </a>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="col-md-4">
@@ -327,21 +326,19 @@
                 <span class="fa fa-home"></span>
               </div>
               <div class="card-title-c align-self-center">
-                <h2 class="title-c">Sell</h2>
+                <h2 class="title-c">Build</h2>
               </div>
             </div>
             <div class="card-body-c">
               <p class="content-c">
-                Sed porttitor lectus nibh. Cras ultricies ligula sed magna dictum porta. Praesent sapien massa,
-                convallis a pellentesque
-                nec, egestas non nisi.
+                Our team of experts will guide you through every step, from site clearance to final handover.
               </p>
             </div>
-            <div class="card-footer-c">
+            <!-- <div class="card-footer-c">
               <a href="#" class="link-c link-icon">Read more
                 <span class="ion-ios-arrow-forward"></span>
               </a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -370,21 +367,22 @@
         <div class="carousel-item-b">
           <div class="card-box-a card-shadow">
             <div class="img-box-a">
-              <img src="img/property-6.jpg" alt="" class="img-a img-fluid">
+              <img src="img/drawings/13.jpg" alt="" class="img-a img-fluid">
             </div>
             <div class="card-overlay">
               <div class="card-overlay-a-content">
                 <div class="card-header-a">
                   <h2 class="card-title-a">
-                    <a href="property-single.html">206 Mount
-                      <br /> Olive Road Two</a>
+                    <a href="property-single.html">
+                      <!-- 206 Mount -->
+                      <br /> Apprtment Name</a>
                   </h2>
                 </div>
                 <div class="card-body-a">
-                  <div class="price-box d-flex">
+                  <!-- <div class="price-box d-flex">
                     <span class="price-a">rent | Ksh 12.000</span>
-                  </div>
-                  <a href="#" class="link-a">Click here to view
+                  </div> -->
+                  <a href="property-single.html" class="link-a">Click here to view
                     <span class="ion-ios-arrow-forward"></span>
                   </a>
                 </div>
@@ -414,7 +412,7 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item-b">
+        <!-- <div class="carousel-item-b">
           <div class="card-box-a card-shadow">
             <div class="img-box-a">
               <img src="img/property-3.jpg" alt="" class="img-a img-fluid">
@@ -460,8 +458,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="carousel-item-b">
+        </div> -->
+        <!-- <div class="carousel-item-b">
           <div class="card-box-a card-shadow">
             <div class="img-box-a">
               <img src="img/property-7.jpg" alt="" class="img-a img-fluid">
@@ -507,8 +505,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="carousel-item-b">
+        </div> -->
+        <!-- <div class="carousel-item-b">
           <div class="card-box-a card-shadow">
             <div class="img-box-a">
               <img src="img/property-10.jpg" alt="" class="img-a img-fluid">
@@ -554,7 +552,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -581,7 +579,7 @@
         <div class="col-md-4">
           <div class="card-box-d">
             <div class="card-img-d">
-              <img src="img/elisha.jpeg" alt="" class="img-d img-fluid">
+              <img src="img/members/elisha.jpeg" alt="" class="img-d img-fluid">
             </div>
             <div class="card-overlay card-overlay-hover">
               <div class="card-header-d">
@@ -601,7 +599,7 @@
                   <p>
                     <strong>Phone: </strong> +254 708 912988</p>
                   <p>
-                    <strong>Email: </strong> elisha.gweth@alloninvestments.com</p>
+                    <strong>Email: </strong> elisha.gweth@alloninvestments.co.ke</p>
                 </div>
               </div>
               <div class="card-footer-d">
@@ -641,7 +639,7 @@
         <div class="col-md-4">
           <div class="card-box-d">
             <div class="card-img-d">
-              <img src="img/seline.jpeg" alt="" class="img-d img-fluid">
+              <img src="img/members/seline.jpeg" alt="" class="img-d img-fluid">
             </div>
             <div class="card-overlay card-overlay-hover">
               <div class="card-header-d">
@@ -661,7 +659,7 @@
                   <p>
                     <strong>Phone: </strong> +254 713 757795</p>
                   <p>
-                    <strong>Email: </strong> selina.kodo@alloninvestments.com</p>
+                    <strong>Email: </strong> selina.kodo@alloninvestments.co.ke</p>
                 </div>
               </div>
               <div class="card-footer-d">
@@ -701,13 +699,13 @@
         <div class="col-md-4">
           <div class="card-box-d">
             <div class="card-img-d">
-              <img src="img/cris.jpeg" alt="" class="img-d img-fluid">
+              <img src="img/members/hempstone.jpg" alt="" class="img-d img-fluid">
             </div>
             <div class="card-overlay card-overlay-hover">
               <div class="card-header-d">
                 <div class="card-title-d align-self-center">
                   <h3 class="title-d">
-                    <a href="agent-single.html" class="link-two">Wilson Anyonga
+                    <a href="agent-single.html" class="link-two">Hempston Nyawanda
                       <!-- <br> Cascada -->
                     </a>
                   </h3>
@@ -715,13 +713,13 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  IT Consultant
+                  Architect
                 </p>
                 <div class="info-agents color-a">
                   <p>
                     <strong>Phone: </strong> +254 707 591002</p>
                   <p>
-                    <strong>Email: </strong> wilson.anyonga@alloninvestments.com</p>
+                    <strong>Email: </strong> hempstone.nyawanda<br/>@alloninvestments.co.ke</p>
                 </div>
               </div>
               <div class="card-footer-d">
@@ -764,7 +762,7 @@
   <!--/ Agents End /-->
 
   <!--/ News Star /-->
-  <section class="section-news section-t8">
+  <!-- <section class="section-news section-t8">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -875,11 +873,11 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!--/ News End /-->
 
   <!--/ Testimonials Star /-->
-  <section class="section-testimonials section-t8 nav-arrow-a">
+  <!-- <section class="section-testimonials section-t8 nav-arrow-a">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -947,7 +945,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!--/ Testimonials End /-->
 
   <!--/ footer Star /-->
@@ -968,14 +966,14 @@
             <div class="w-footer-a">
               <ul class="list-unstyled">
                 <li class="color-a">
-                  <span class="color-text-a">Phone .</span> contact@example.com</li>
+                  <span class="color-text-a">Email .</span> info@allonivestments.co.ke</li>
                 <li class="color-a">
-                  <span class="color-text-a">Email .</span> +54 356 945234</li>
+                  <span class="color-text-a">Phone .</span> +254 708 912988</li>
               </ul>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-4 section-md-t3">
+        <!-- <div class="col-sm-12 col-md-4 section-md-t3">
           <div class="widget-a">
             <div class="w-header-a">
               <h3 class="w-title-a text-brand">The Company</h3>
@@ -1005,8 +1003,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-12 col-md-4 section-md-t3">
+        </div> -->
+        <!-- <div class="col-sm-12 col-md-4 section-md-t3">
           <div class="widget-a">
             <div class="w-header-a">
               <h3 class="w-title-a text-brand">International sites</h3>
@@ -1034,7 +1032,7 @@
               </ul>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -1096,15 +1094,15 @@
               <span class="color-a">Allon Investments</span> All Rights Reserved.
             </p>
           </div>
-          <div class="credits">
+          <!-- <div class="credits"> -->
             <!--
               All the links in the footer should remain intact.
               You can delete the links only if you purchased the pro version.
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Allon Investments
             -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-          </div>
+            <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          </div> -->
         </div>
       </div>
     </div>
