--- a/property-single.html
+++ b/property-single.html
@@ -155,10 +155,10 @@
           <li class="nav-item">
             <a class="nav-link" href="property-grid.html">Property</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="blog-grid.html">Blog</a>
-          </li>
-          <li class="nav-item dropdown">
+          </li> -->
+          <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
               Pages
@@ -169,16 +169,16 @@
               <a class="dropdown-item" href="agents-grid.html">Agents Grid</a>
               <a class="dropdown-item" href="agent-single.html">Agent Single</a>
             </div>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
-      <button type="button" class="btn btn-b-n navbar-toggle-box-collapse d-none d-md-block" data-toggle="collapse"
+      <!-- <button type="button" class="btn btn-b-n navbar-toggle-box-collapse d-none d-md-block" data-toggle="collapse"
         data-target="#navbarTogglerDemo01" aria-expanded="false">
         <span class="fa fa-search" aria-hidden="true"></span>
-      </button>
+      </button> -->
     </div>
   </nav>
   <!--/ Nav End /-->
@@ -189,8 +189,8 @@
       <div class="row">
         <div class="col-md-12 col-lg-8">
           <div class="title-single-box">
-            <h1 class="title-single">304 Blaster Up</h1>
-            <span class="color-text-a">Chicago, IL 606543</span>
+            <h1 class="title-single">Building Name</h1>
+            <span class="color-text-a">Kisumu, Kenya</span>
           </div>
         </div>
         <div class="col-md-12 col-lg-4">
@@ -203,7 +203,7 @@
                 <a href="property-grid.html">Properties</a>
               </li>
               <li class="breadcrumb-item active" aria-current="page">
-                304 Blaster Up
+                Building Name
               </li>
             </ol>
           </nav>
@@ -220,18 +220,48 @@
         <div class="col-sm-12">
           <div id="property-single-carousel" class="owl-carousel owl-arrow gallery-property">
             <div class="carousel-item-b">
-              <img src="img/slide-2.jpg" alt="">
+              <img src="img/drawings/1.jpg" alt="">
             </div>
             <div class="carousel-item-b">
-              <img src="img/slide-3.jpg" alt="">
+              <img src="img/drawings/2.jpg" alt="">
             </div>
             <div class="carousel-item-b">
-              <img src="img/slide-1.jpg" alt="">
+              <img src="img/drawings/3.jpg" alt="">
+            </div>
+            <div class="carousel-item-b">
+              <img src="img/drawings/4.jpg" alt="">
+            </div>
+            <div class="carousel-item-b">
+              <img src="img/drawings/5.jpg" alt="">
+            </div>
+            <div class="carousel-item-b">
+              <img src="img/drawings/6.jpg" alt="">
+            </div>
+            <div class="carousel-item-b">
+              <img src="img/drawings/7.jpg" alt="">
+            </div>
+            <div class="carousel-item-b">
+              <img src="img/drawings/8.jpg" alt="">
+            </div>
+            <div class="carousel-item-b">
+              <img src="img/drawings/9.jpg" alt="">
+            </div>
+            <div class="carousel-item-b">
+              <img src="img/drawings/10.jpg" alt="">
+            </div>
+            <div class="carousel-item-b">
+              <img src="img/drawings/11.jpg" alt="">
+            </div>
+            <div class="carousel-item-b">
+              <img src="img/drawings/12.jpg" alt="">
+            </div>
+            <div class="carousel-item-b">
+              <img src="img/drawings/13.jpg" alt="">
             </div>
           </div>
           <div class="row justify-content-between">
             <div class="col-md-5 col-lg-4">
-              <div class="property-price d-flex justify-content-center foo">
+              <!-- <div class="property-price d-flex justify-content-center foo">
                 <div class="card-header-c d-flex">
                   <div class="card-box-ico">
                     <span class="ion-money">$</span>
@@ -240,7 +270,7 @@
                     <h5 class="title-c">15000</h5>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <div class="property-summary">
                 <div class="row">
                   <div class="col-sm-12">
@@ -336,34 +366,36 @@
         </div>
         <div class="col-md-10 offset-md-1">
           <ul class="nav nav-pills-a nav-pills mb-3 section-t3" id="pills-tab" role="tablist">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link active" id="pills-video-tab" data-toggle="pill" href="#pills-video" role="tab"
                 aria-controls="pills-video" aria-selected="true">Video</a>
-            </li>
+            </li> -->
             <li class="nav-item">
-              <a class="nav-link" id="pills-plans-tab" data-toggle="pill" href="#pills-plans" role="tab" aria-controls="pills-plans"
+              <a class="nav-link active" id="pills-plans-tab" data-toggle="pill" href="#pills-plans" role="tab" aria-controls="pills-plans"
                 aria-selected="false">Floor Plans</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="pills-map-tab" data-toggle="pill" href="#pills-map" role="tab" aria-controls="pills-map"
-                aria-selected="false">Ubication</a>
+                aria-selected="false">Location</a>
             </li>
           </ul>
           <div class="tab-content" id="pills-tabContent">
-            <div class="tab-pane fade show active" id="pills-video" role="tabpanel" aria-labelledby="pills-video-tab">
+            <!-- <div class="tab-pane fade show active" id="pills-video" role="tabpanel" aria-labelledby="pills-video-tab">
               <iframe src="https://player.vimeo.com/video/73221098" width="100%" height="460" frameborder="0"
                 webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            </div>
-            <div class="tab-pane fade" id="pills-plans" role="tabpanel" aria-labelledby="pills-plans-tab">
+            </div> -->
+            <div class="tab-pane fade show active" id="pills-plans" role="tabpanel" aria-labelledby="pills-plans-tab">
               <img src="img/plan2.jpg" alt="" class="img-fluid">
             </div>
             <div class="tab-pane fade" id="pills-map" role="tabpanel" aria-labelledby="pills-map-tab">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.1422937950147!2d-73.98731968482413!3d40.75889497932681!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25855c6480299%3A0x55194ec5a1ae072e!2sTimes+Square!5e0!3m2!1ses-419!2sve!4v1510329142834"
-                width="100%" height="460" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>
+              <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.1422937950147!2d-73.98731968482413!3d40.75889497932681!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25855c6480299%3A0x55194ec5a1ae072e!2sTimes+Square!5e0!3m2!1ses-419!2sve!4v1510329142834"
+                width="100%" height="460" frameborder="0" style="border:0" allowfullscreen></iframe> -->
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1186.1784486590668!2d34.76760580207719!3d-0.09512706811421208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1698670974112!5m2!1sen!2sus" 
+                width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
           </div>
         </div>
-        <div class="col-md-12">
+        <!-- <div class="col-md-12">
           <div class="row section-t3">
             <div class="col-sm-12">
               <div class="title-box-d">
@@ -462,7 +494,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -486,14 +518,14 @@
             <div class="w-footer-a">
               <ul class="list-unstyled">
                 <li class="color-a">
-                  <span class="color-text-a">Phone .</span> contact@example.com</li>
+                  <span class="color-text-a">Email .</span> info@allonivestments.co.ke</li>
                 <li class="color-a">
-                  <span class="color-text-a">Email .</span> +54 356 945234</li>
+                  <span class="color-text-a">Phone .</span> +254 708 912988</li>
               </ul>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-4 section-md-t3">
+        <!-- <div class="col-sm-12 col-md-4 section-md-t3">
           <div class="widget-a">
             <div class="w-header-a">
               <h3 class="w-title-a text-brand">The Company</h3>
@@ -523,8 +555,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-12 col-md-4 section-md-t3">
+        </div> -->
+        <!-- <div class="col-sm-12 col-md-4 section-md-t3">
           <div class="widget-a">
             <div class="w-header-a">
               <h3 class="w-title-a text-brand">International sites</h3>
@@ -552,7 +584,7 @@
               </ul>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -571,9 +603,9 @@
               <li class="list-inline-item">
                 <a href="#">Property</a>
               </li>
-              <li class="list-inline-item">
+              <!-- <li class="list-inline-item">
                 <a href="#">Blog</a>
-              </li>
+              </li> -->
               <li class="list-inline-item">
                 <a href="#">Contact</a>
               </li>
@@ -614,15 +646,15 @@
               <span class="color-a">Allon Investments</span> All Rights Reserved.
             </p>
           </div>
-          <div class="credits">
+          <!-- <div class="credits"> -->
             <!--
               All the links in the footer should remain intact.
               You can delete the links only if you purchased the pro version.
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Allon Investments
             -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-          </div>
+            <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          </div> -->
         </div>
       </div>
     </div>
