--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
                       <!-- <br> 78345 -->
                     </p>
                     <h1 class="intro-title mb-4">
-                      <span class="color-b">204 </span> Appartment
-                      <br>  Name</h1>
+                      <span class="color-b">The </span> Mosaic
+                      <br>  </h1>
                     <!-- <p class="intro-subtitle intro-price">
                       <a href="#"><span class="price-a">rent | Ksh 12.000</span></a>
                     </p> -->
@@ -222,8 +222,8 @@
                       <!-- <br> 78345 -->
                     </p>
                     <h1 class="intro-title mb-4">
-                      <span class="color-b">204 </span> Appartment
-                      <br>  Name</h1>
+                      <span class="color-b">The </span> Mosaic
+                      <br>  </h1>
                     <!-- <p class="intro-subtitle intro-price">
                       <a href="#"><span class="price-a">rent | Ksh 12.000</span></a>
                     </p> -->
@@ -246,8 +246,8 @@
                       <!-- <br> 78345 -->
                     </p>
                     <h1 class="intro-title mb-4">
-                      <span class="color-b">204 </span> Appartment
-                      <br>  Name</h1>
+                      <span class="color-b">The </span> Mosaic
+                      <br>  </h1>
                     <!-- <p class="intro-subtitle intro-price">
                       <a href="#"><span class="price-a">rent | Ksh 12.000</span></a>
                     </p> -->
