--- a/agents-grid.html
+++ b/agents-grid.html
@@ -230,7 +230,7 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  CEO
+                  Chief Executive Officer (CEO)
                 </p>
                 <div class="info-agents color-a">
                   <p>
@@ -289,7 +289,7 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  CEO
+                  Chief Compliance Officer (CCO)
                 </p>
                 <div class="info-agents color-a">
                   <p>
@@ -348,7 +348,7 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  Chief Financial Officer.
+                  Chief Financial Officer (CFO).
                 </p>
                 <div class="info-agents color-a">
                   <p>
@@ -407,7 +407,7 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  Architect, COO
+                  Architect, Chief Operations Officer (COO)
                 </p>
                 <div class="info-agents color-a">
                   <p>
@@ -525,7 +525,7 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                 IT Department
+                  Head of ICT Department
                 </p>
                 <div class="info-agents color-a">
                   <p>
@@ -584,7 +584,7 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  IT Department
+                  Chief Technical Officer
                 </p>
                 <div class="info-agents color-a">
                   <p>
@@ -695,14 +695,14 @@
               <div class="card-header-d">
                 <div class="card-title-d align-self-center">
                   <h3 class="title-d">
-                    <a  class="link-two">Naphtal Kwach
+                    <a  class="link-two">Naphtali Kwach
                       <!-- <br> Escala</a> -->
                   </h3>
                 </div>
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  Structural Engineer
+                  Chief Structural Engineer
                 </p>
                 <div class="info-agents color-a">
                   <p>
@@ -820,7 +820,7 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  Structural Engineer
+                  Contract Manager
                 </p>
                 <div class="info-agents color-a">
                   <p>
@@ -879,7 +879,7 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  Structural Engineer
+                  Physical Planner
                 </p>
                 <div class="info-agents color-a">
                   <p>
@@ -938,13 +938,72 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  Structural Engineer
+                  Director-Marketing and Sales
                 </p>
                 <div class="info-agents color-a">
                   <p>
                     <strong>Phone: </strong> +254 757 748221</p>
                   <p>
                     <strong>Email: </strong> brian.onunga<br/>@alloninvestments.co.ke</p>
+                </div>
+              </div>
+              <div class="card-footer-d">
+                <div class="socials-footer d-flex justify-content-center">
+                  <ul class="list-inline">
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="fa fa-pinterest-p" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a href="#" class="link-one">
+                        <i class="fa fa-dribbble" aria-hidden="true"></i>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card-box-d">
+            <div class="card-img-d">
+              <img src="img/members/linus.jpg" alt="" class="img-d img-fluid">
+            </div>
+            <div class="card-overlay card-overlay-hover">
+              <div class="card-header-d">
+                <div class="card-title-d align-self-center">
+                  <h3 class="title-d">
+                    <a class="link-two">Linus Oyugi
+                      <!-- <br> Escala</a> -->
+                  </h3>
+                </div>
+              </div>
+              <div class="card-body-d">
+                <p class="content-d color-text-a">
+                  Legal Counsel
+                </p>
+                <div class="info-agents color-a">
+                  <p>
+                    <strong>Phone: </strong> +254 728 920514</p>
+                  <p>
+                    <strong>Email: </strong> linus.oyugi<br/>@alloninvestments.co.ke</p>
                 </div>
               </div>
               <div class="card-footer-d">
